--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,11 @@
 @import './components/responsive';
+@import './components/fonts';
 
 .feature-ride {
-  min-height: 80vh;
-  // border-radius: 10px;
-  // overflow: hidden;
+  min-height: calc(100vh - 100px - 3em);
 
   @media screen and (max-width: $large) {
-    min-height: 50vh;
+    min-height: 60vh;
   }
 
   position: relative;
@@ -16,7 +15,11 @@
     height: 100%;
     display: block;
     position: absolute;
-    background-color: rgba($color: #000000, $alpha: 0.4);
+    background-image: linear-gradient(
+      -180deg,
+      rgba(0, 0, 0, 0) 6%,
+      #000000 100%
+    );
     z-index: 1;
   }
 }
@@ -45,4 +48,74 @@
   @media screen and (max-width: $large) {
     height: 600px;
   }
+}
+
+.c-header {
+  height: 100px;
+}
+
+.c-header__logo {
+  letter-spacing: -1px;
+}
+.sans-serif {
+  font-family: 'Inter UI';
+}
+
+@keyframes loaderAnimation {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.loader {
+  animation: loaderAnimation 1s ease-in-out infinite;
+}
+
+.c-strava-stats {
+  // box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);
+}
+
+.c-geo-paragraph-icon-container {
+  position: relative;
+}
+
+.c-geo-paragraph-icon {
+  position: absolute;
+  top: 3px;
+  left: -30px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.c-altitude-card {
+  background-image: linear-gradient(-180deg, #ededed 0%, #dfdfdf 100%);
+}
+
+.c-strava-stats-card {
+  background-image: linear-gradient(-180deg, #ededed 0%, #dfdfdf 100%);
+}
+
+.gatsby-resp-image-figure {
+  margin: 3em 0;
+}
+
+.gatsby-resp-image-figcaption {
+  text-align: center;
+  margin-top: 1em;
+  font-style: italic;
+  color: #999;
+  font-size: 16px;
+}
+
+.link {
+  cursor: pointer;
+}
+
+.serif {
+  font-family: 'Merriweather', serif;
 }
