--- a/src/styles/components/_fonts.scss
+++ b/src/styles/components/_fonts.scss
@@ -1,91 +1,95 @@
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/Inter-UI-Regular.woff2') format('woff2'),
-    url('../fonts/Inter-UI-Regular.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/Inter-UI-Italic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-Italic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('../fonts/Inter-UI-Regular.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-Regular.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 400;
+//   src: url('../fonts/Inter-UI-Italic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-Italic.woff') format('woff');
+// }
 
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/Inter-UI-Medium.woff2') format('woff2'),
-    url('../fonts/Inter-UI-Medium.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 500;
-  src: url('../fonts/Inter-UI-MediumItalic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-MediumItalic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 500;
+//   src: url('../fonts/Inter-UI-Medium.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-Medium.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 500;
+//   src: url('../fonts/Inter-UI-MediumItalic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-MediumItalic.woff') format('woff');
+// }
 
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/Inter-UI-SemiBold.woff2') format('woff2'),
-    url('../fonts/Inter-UI-SemiBold.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 600;
-  src: url('../fonts/Inter-UI-SemiBoldItalic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-SemiBoldItalic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 600;
+//   src: url('../fonts/Inter-UI-SemiBold.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-SemiBold.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 600;
+//   src: url('../fonts/Inter-UI-SemiBoldItalic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-SemiBoldItalic.woff') format('woff');
+// }
 
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/Inter-UI-Bold.woff2') format('woff2'),
-    url('../fonts/Inter-UI-Bold.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 700;
-  src: url('../fonts/Inter-UI-BoldItalic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-BoldItalic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 700;
+//   src: url('../fonts/Inter-UI-Bold.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-Bold.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 700;
+//   src: url('../fonts/Inter-UI-BoldItalic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-BoldItalic.woff') format('woff');
+// }
 
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 800;
-  src: url('../fonts/Inter-UI-ExtraBold.woff2') format('woff2'),
-    url('../fonts/Inter-UI-ExtraBold.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 800;
-  src: url('../fonts/Inter-UI-ExtraBoldItalic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-ExtraBoldItalic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 800;
+//   src: url('../fonts/Inter-UI-ExtraBold.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-ExtraBold.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 800;
+//   src: url('../fonts/Inter-UI-ExtraBoldItalic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-ExtraBoldItalic.woff') format('woff');
+// }
 
-@font-face {
-  font-family: 'Inter UI';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/Inter-UI-Black.woff2') format('woff2'),
-    url('../fonts/Inter-UI-Black.woff') format('woff');
-}
-@font-face {
-  font-family: 'Inter UI';
-  font-style: italic;
-  font-weight: 900;
-  src: url('../fonts/Inter-UI-BlackItalic.woff2') format('woff2'),
-    url('../fonts/Inter-UI-BlackItalic.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: normal;
+//   font-weight: 900;
+//   src: url('../fonts/Inter-UI-Black.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-Black.woff') format('woff');
+// }
+// @font-face {
+//   font-family: 'Inter UI';
+//   font-style: italic;
+//   font-weight: 900;
+//   src: url('../fonts/Inter-UI-BlackItalic.woff2') format('woff2'),
+//     url('../fonts/Inter-UI-BlackItalic.woff') format('woff');
+// }
 
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700,900');
+// @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700,900');
+
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif');
+
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
