change header font back to merriweather

--- a/src/styles/components/_fonts.scss
+++ b/src/styles/components/_fonts.scss
@@ -90,6 +90,8 @@
 
 // @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700,900');
 
+@import url('https://fonts.googleapis.com/css?family=Merriweather:900');
+
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif');
 
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
