--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,7 +37,7 @@
 }
 
 .ride-body {
-  overflow: auto;
+  overflow-y: scroll;
   @media screen and (max-width: $large) {
     overflow: inherit;
     height: auto;
