add touch overflow scrolling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,6 +38,7 @@
 
 .ride-body {
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   @media screen and (max-width: $large) {
     overflow: inherit;
     height: auto;
