update logo placement

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,6 +58,10 @@
 .c-header__logo {
   letter-spacing: -1px;
 }
+.c-header__emoji {
+  position: relative;
+  top: -3px;
+}
 .sans-serif {
   font-family: 'IBM Plex Sans', sans-serif;
 }
