--- a/src/styles/components/_fonts.scss
+++ b/src/styles/components/_fonts.scss
@@ -94,4 +94,4 @@
 
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif');
 
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700');
