--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -153,7 +153,8 @@
     margin: 0 auto !important;
   }
 
-  h1 {
+  h1,
+  ul {
     max-width: 500px;
     margin-left: auto !important;
     margin-right: auto !important;
