--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,20 +36,61 @@
   z-index: 2;
 }
 
-.ride-body {
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+
+
+.c-post-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr;
+  height: 100vh;
+  width: 100vw;
+  overflow: auto;
   @media screen and (max-width: $large) {
-    overflow: inherit;
-    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 75% 25%;
+    height: 100vh;
   }
 }
 
-.ride-map {
+.c-post-body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  grid-column-start: 1;
+  grid-column-end: 2;
   @media screen and (max-width: $large) {
-    height: 600px;
+    grid-row-start: 1;
+    grid-row-end: 2;
   }
 }
+
+.c-post-map {
+  height: 100vh;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  @media screen and (max-width: $large) {
+    box-shadow: 0 -4px 36px rgba(0, 0, 0, 0.3);
+    border-radius: 16px 16px 0 0;
+    height: auto;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+}
+
+// .post-body {
+//   height: 100vh;
+// }
+
+// .post-map {
+//   height: 100vh;
+//   @media screen and (max-width: $large) {
+//     height: inherit;
+//     grid-row-start: 2;
+//     grid-row-end: 3;
+//   }
+// }
 
 .c-header {
   height: 100px;
