--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -193,7 +193,7 @@
     margin: 3em auto !important;
   }
 
-  h1,h2,h3
+  h1,h2,h3,
   ul {
     max-width: 500px;
     margin-left: auto !important;
