add day 3 entry

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -256,6 +256,7 @@ $map-height: 200px;
     .flex {
       @media screen and (max-width: $large) {
         flex-direction: column;
+        width: 100%;
       }
     }
   }
